--- a/Views/HotelModels/Create.cshtml
+++ b/Views/HotelModels/Create.cshtml
@@ -1,63 +1,58 @@
 ﻿@model Hotel_Room_Booking.Models.HotelModel
 
 @{
-    ViewData["Title"] = "Create";
+    ViewData["Title"] = "Add Hotel";
 }
 
-<h1>Create</h1>
-
-<h4>HotelModel</h4>
-<hr />
-<div class="row">
-    <div class="col-md-4">
-        <form asp-action="Create">
-            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <div class="form-group">
-                <label asp-for="City" class="control-label"></label>
-                <input asp-for="City" class="form-control" />
-                <span asp-validation-for="City" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Address" class="control-label"></label>
-                <input asp-for="Address" class="form-control" />
-                <span asp-validation-for="Address" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="HotelName" class="control-label"></label>
-                <input asp-for="HotelName" class="form-control" />
-                <span asp-validation-for="HotelName" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Rooms" class="control-label"></label>
-                <input asp-for="Rooms" class="form-control" />
-                <span asp-validation-for="Rooms" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Image" class="control-label"></label>
-                <input asp-for="Image" class="form-control" />
-                <span asp-validation-for="Image" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Description" class="control-label"></label>
-                <input asp-for="Description" class="form-control" />
-                <span asp-validation-for="Description" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Price" class="control-label"></label>
-                <input asp-for="Price" class="form-control" />
-                <span asp-validation-for="Price" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
-            </div>
-        </form>
-    </div>
-</div>
-
-<div>
-    <a asp-action="Index">Back to List</a>
-</div>
-
+<section class="title-template">
+    <h1 class="title">Add Hotel</h1>
+    <form class="contact-form row" asp-action="Create">
+        <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+        <div class="form-field col-lg-6">
+            <label asp-for="City" class="control-label"></label>
+            <input asp-for="City" class="form-control" />
+            <span asp-validation-for="City" class="text-danger"></span>
+        </div>
+        <div class="form-field col-lg-6 ">
+            <label asp-for="Address" class="control-label"></label>
+            <input asp-for="Address" class="form-control" />
+            <span asp-validation-for="Address" class="text-danger"></span>
+        </div>
+        <div class="form-field col-lg-6 ">
+            <label asp-for="HotelName" class="control-label"></label>
+            <input asp-for="HotelName" class="form-control" />
+            <span asp-validation-for="HotelName" class="text-danger"></span>
+        </div>
+        <div class="form-field col-lg-6 ">
+            <label asp-for="Rooms" class="control-label"></label>
+            <input asp-for="Rooms" class="form-control" />
+            <span asp-validation-for="Rooms" class="text-danger"></span>
+        </div>
+        <div class="form-field col-lg-12">
+            <label asp-for="Image" class="control-label"></label>
+            <input asp-for="Image" class="form-control" />
+            <span asp-validation-for="Image" class="text-danger"></span>
+        </div>
+        <div class="form-field col-lg-12">
+            <label asp-for="Description" class="control-label"></label>
+            <input asp-for="Description" class="form-control" />
+            <span asp-validation-for="Description" class="text-danger"></span>
+        </div>
+        <div class="form-field col-lg-12">
+            <label asp-for="Price" class="control-label"></label>
+            <input asp-for="Price" class="form-control" />
+            <span asp-validation-for="Price" class="text-danger"></span>
+        </div>
+        <div class="d-flex justify-content-between">
+        <div class="form-field">
+            <input type="submit" class="submit-btn" value="Create" class="btn btn-primary" />
+        </div>
+        <div class="form-field">
+            <a class="btn submit-btn" asp-action="Index">Back to List</a>
+        </div>
+        </div>
+    </form>
+</section>
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
 }
