Profile section added

--- a/Views/HotelModels/Index.cshtml
+++ b/Views/HotelModels/Index.cshtml
@@ -3,9 +3,13 @@
 @{
     ViewData["Title"] = "Index";
 }
-<p class="d-flex justify-content-center">
-    <a class="btn btn-outline-light" asp-action="Create">Create New</a>
-</p>
+@if (User.Identity.IsAuthenticated && User.IsInRole("admin"))
+{
+    <p class="d-flex justify-content-center">
+        <a class="btn btn-outline-light" asp-action="Create">Create New</a>
+    </p>
+}
+
 <br />
 <div class="row mb-4 d-flex justify-content-center">
     <div class="col-md-6">
@@ -34,11 +38,14 @@
                             <h4>$@item.Price <span>/ Night</span></h4>
                         </div>
                         <div class="actionBtn">
-                            <a class="btn btn-primary" asp-action="Edit" asp-route-id="@item.HotelId">Edit</a>
                             <a class="btn btn-success" asp-action="Details" asp-route-id="@item.HotelId">Details</a>
-                            @if (item.Rooms == 20)
+                            @if (User.IsInRole("admin"))
                             {
-                                <a class="btn btn-danger" asp-action="Delete" asp-route-id="@item.HotelId">Delete</a>
+                                <a class="btn btn-primary" asp-action="Edit" asp-route-id="@item.HotelId">Edit</a>
+                                @if (item.Rooms == 20)
+                                {
+                                    <a class="btn btn-danger" asp-action="Delete" asp-route-id="@item.HotelId">Delete</a>
+                                }
                             }
                         </div>
                     </div>
