--- a/Views/HotelModels/Details.cshtml
+++ b/Views/HotelModels/Details.cshtml
@@ -55,8 +55,16 @@
     </dl>
 </div>
 <div>
-    <a asp-action="Edit" asp-route-id="@Model?.HotelId">Edit</a> |
-    <a asp-action="Index">Back to List</a>
-    <a asp-controller="CustomerModels" asp-action="Create" asp-route-id="@Model?.HotelId">Book</a>
-    <a asp-controller="CustomerModels" asp-action="Reviews" asp-route-id="@Model?.HotelId">Reviews</a>
+    @if (User.IsInRole("admin"))
+    {
+        <a class="btn btn-outline-primary" asp-action="Edit" asp-route-id="@Model?.HotelId">Edit</a>
+    }
+    
+    <a class="btn btn-secondary" asp-action="Index">Back to List</a>
+    @if (User.Identity.IsAuthenticated && !User.IsInRole("admin"))
+    {
+        <a class="btn btn-primary" asp-controller="CustomerModels" asp-action="Create" asp-route-id="@Model?.HotelId">Book</a>
+    }
+   
+    <a class="btn btn-warning" asp-controller="CustomerModels" asp-action="Reviews" asp-route-id="@Model?.HotelId">Reviews</a>
 </div>
