--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -169,3 +169,87 @@ body {
     cursor: pointer;
 }
 
+/*Profile Section*/
+
+.profile-body {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.profile-card {
+    display: grid;
+    grid-template-columns: 350px;
+    grid-template-rows: 210px 210px 80px;
+    grid-template-areas: "image" "text" "stats";
+    border-radius: 18px;
+    background: white;
+    box-shadow: 5px 5px 15px rgba(0,0,0,0.9);
+    font-family: roboto;
+    text-align: center;
+}
+
+.profile-card-image {
+    grid-area: image;
+}
+
+.profile-card-text {
+    grid-area: text;
+}
+
+.profile-card-stats {
+    grid-area: stats;
+}
+
+.profile-card-image {
+    grid-area: image;
+    border-top-left-radius: 15px;
+    border-top-right-radius: 15px;
+    background-size: cover;
+}
+
+.profile-card-text {
+    grid-area: text;
+    margin: 10px;
+}
+
+    .profile-card-text .days {
+        color: rgb(255, 7, 110);
+        font-size:25px;
+    }
+
+    .profile-card-text p {
+        color: grey;
+        font-size: 15px;
+        font-weight: 300;
+    }
+
+    .profile-card-text h2 {
+        color:black;
+        margin-top: 0px;
+        font-size: 28px;
+    }
+
+.profile-card-stats {
+    grid-area: stats;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 1fr;
+    border-bottom-left-radius: 15px;
+    border-bottom-right-radius: 15px;
+    background: rgb(255, 7, 110);
+}
+
+    .profile-card-stats .stat {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        flex-direction: column;
+        color: white;
+        padding: 10px;
+    }
+
+.profile-card:hover {
+    transform: scale(1.15);
+    box-shadow: 5px 5px 15px rgba(0,0,0,0.6);
+}
