--- a/Views/CustomerModels/Profile.cshtml
+++ b/Views/CustomerModels/Profile.cshtml
@@ -25,6 +25,9 @@
 <div class="d-flex justify-content-center" style="margin-top: 50px">
     <a class="btn btn-danger" onclick="confirmCancel(@Model.CustomerId)">Cancel</a>
 </div>
+<div class="d-flex justify-content-center" style="margin-top: 50px">
+    <a class="btn btn-warning" asp-action="addReview" asp-route-id="@Model.CustomerId">Review</a>
+</div>
 
 <script>
     function confirmCancel(customerId) {
