--- a/Views/CustomerModels/Profile.cshtml
+++ b/Views/CustomerModels/Profile.cshtml
@@ -1,34 +1,36 @@
-﻿@model CustomerModel
+﻿@model List<CustomerModel>
 
+@foreach(var customer in Model){
 <div class="profile-body">
     <div class="profile-card" style="margin-top: 70px">
-        <div class="profile-card-image" style="background-image: url('@Model.Hotel.Image');">
+        <div class="profile-card-image" style="background-image: url('@customer.Hotel.Image');">
         </div>
         <div class="profile-card-text">
-            <h2 class="mt-2">@Model.Hotel.HotelName</h2>
-            <p>@Model.Hotel.Address</p>
-            <p>Rooms: @Model.Rooms</p>
-            <span class="days">Price : $@((Model.CheckOut - Model.CheckIn).TotalDays * Model.Hotel.Price * Model.Rooms)</span>
+                <h2 class="mt-2">@customer.Hotel.HotelName</h2>
+                <p>@customer.Hotel.Address</p>
+                <p>Rooms: @customer.Rooms</p>
+                <span class="days">Price : $@((customer.CheckOut - customer.CheckIn).TotalDays * customer.Hotel.Price * customer.Rooms)</span>
         </div>
         <div class="profile-card-stats">
             <div class="stat">
-                <div class="value">@Model.CheckIn.ToShortDateString()</div>
+                    <div class="value">@customer.CheckIn.ToShortDateString()</div>
                 <div class="type">Check In</div>
             </div>
             <div class="stat">
-                <div class="value">@Model.CheckOut.ToShortDateString()</div>
+                    <div class="value">@customer.CheckOut.ToShortDateString()</div>
                 <div class="type">Check Out</div>
             </div>
         </div>
     </div>
 </div>
 <div class="d-flex justify-content-center" style="margin-top: 50px">
-    <a class="btn btn-danger" onclick="confirmCancel(@Model.CustomerId)">Cancel</a>
+        <a class="btn btn-danger" onclick="confirmCancel(@customer.CustomerId)">Cancel</a>
 </div>
-<div class="d-flex justify-content-center" style="margin-top: 50px">
-    <a class="btn btn-warning" asp-action="addReview" asp-route-id="@Model.CustomerId">Review</a>
+<div class="d-flex justify-content-center" style="margin-top: 10px">
+        <a class="btn btn-warning" asp-action="addReview" asp-route-id="@customer.CustomerId">Review</a>
 </div>
-
+<hr />
+}
 <script>
     function confirmCancel(customerId) {
         if (confirm("Are you sure ! You want to cancel your Booking ?")) {
