--- a/Views/HotelModels/Details.cshtml
+++ b/Views/HotelModels/Details.cshtml
@@ -4,67 +4,46 @@
     ViewData["Title"] = "Details";
 }
 
-<h1>Details</h1>
+<div class="max-w-full" style="margin-top:-70px;">
+    <div class="flex items-center justify-center min-h-screen">
+        <div class="max-w-sm w-full sm:w-1/2 lg:w-1/2 py- px-3">
+            <div class="bg-white shadow-xl rounded-3 overflow-hidden">
+                <div class="bg-cover bg-center h-56 p-4" style="background-image: url(@Model.Image)">
+                    
+                </div>
+                <div class="pt-4 px-4 pb-2">
+                    <p class="uppercase tracking-wide text-sm font-bold text-gray-700">@Model.HotelName (@Model.City)</p>
+                    <p class="text-gray-700"><br />@Model.Address</p>
+                    <p class="text-3xl text-gray-900" style="display: inline-block;">$@Model.Price</p><span class="text-gray-700" style="display: inline-block;">/ Night</span>
+                    <p class="text-gray-700">@Model.Rooms Rooms available</p>
+                    
+                </div>
+                <div class="flex p-4 border-t border-gray-300 text-gray-700">
+                    <div class="flex-1 inline-flex items-center">
+                        @if (User.IsInRole("admin"))
+                        {
+                            <a class="btn btn-outline-primary" asp-action="Edit" asp-route-id="@Model?.HotelId">Edit</a>
+                        }
+                        &nbsp;
+                        <a class="btn btn-secondary" asp-action="Index">Back to List</a>
+                        &nbsp;
+                        @if (User.Identity.IsAuthenticated && !User.IsInRole("admin"))
+                        {
+                            @if (Model.Rooms > 0)
+                            {
+                                <a class="btn btn-primary" asp-controller="CustomerModels" asp-action="Create" asp-route-id="@Model?.HotelId">Book</a>
+                            }
+                            else
+                            {
+                                <p>No Rooms Available</p>
+                            }
+                        }
+                        &nbsp;
+                        <a class="btn btn-warning" asp-controller="CustomerModels" asp-action="Reviews" asp-route-id="@Model?.HotelId">Reviews</a>
 
-<div>
-    <h4>HotelModel</h4>
-    <hr />
-    <dl class="row">
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.City)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.City)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Address)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Address)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.HotelName)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.HotelName)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Rooms)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Rooms)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Image)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Image)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Description)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Description)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Price)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Price)
-        </dd>
-    </dl>
-</div>
-<div>
-    @if (User.IsInRole("admin"))
-    {
-        <a class="btn btn-outline-primary" asp-action="Edit" asp-route-id="@Model?.HotelId">Edit</a>
-    }
-    
-    <a class="btn btn-secondary" asp-action="Index">Back to List</a>
-    @if (User.Identity.IsAuthenticated && !User.IsInRole("admin"))
-    {
-        <a class="btn btn-primary" asp-controller="CustomerModels" asp-action="Create" asp-route-id="@Model?.HotelId">Book</a>
-    }
-   
-    <a class="btn btn-warning" asp-controller="CustomerModels" asp-action="Reviews" asp-route-id="@Model?.HotelId">Reviews</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 </div>
