--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -7,6 +7,10 @@
     font-family: 'Poppins',sans-serif;
 }
 
+hr{
+    color:white;
+}
+
 body {
     color:white;
     height: 100vh;
@@ -44,6 +48,7 @@ body {
     box-shadow: 0 15px 50px rgba(0,0,0,0.35);
     overflow: hidden;
     transition: 0.5s;
+    z-index:1;
 }
 
 .customCard:hover .imgBx {
