--- a/Views/HotelModels/Details.cshtml
+++ b/Views/HotelModels/Details.cshtml
@@ -7,7 +7,7 @@
 <div class="max-w-full" style="margin-top:-70px;">
     <div class="flex items-center justify-center min-h-screen">
         <div class="max-w-sm w-full sm:w-1/2 lg:w-1/2 py- px-3">
-            <div class="bg-white shadow-xl rounded-3 overflow-hidden">
+            <div class="bg-white shadow-xl overflow-hidden detailsCard" style="border-radius:25px;">
                 <div class="bg-cover bg-center h-56 p-4" style="background-image: url(@Model.Image)">
                     
                 </div>
