--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -12,13 +12,14 @@ hr{
 }
 
 body {
-    color:white;
+    color: white;
     height: 100vh;
     width: 100%;
     background: url('overlay.png'),url('paris.jpg');
     background-size: cover;
     background-attachment: fixed;
     background-repeat: no-repeat;
+    overflow-y: scroll; 
 }
 
 .customCard {
@@ -173,6 +174,7 @@ body {
     border: none;
     width: 200px;
     cursor: pointer;
+    border-radius:8px;
 }
 
 /*Profile Section*/
@@ -300,9 +302,9 @@ body {
 .weathercard {
     width: 100%;
     max-width: 470px;
-    background: linear-gradient(135deg,#00feba,#5b548a);
+    background: linear-gradient(125deg,#a72879,#064497);
     color: #fff;
-    margin:  auto 0;
+    margin: auto 0;
     border-radius: 20px;
     padding: 20px 20px;
     text-align: center;
@@ -395,3 +397,13 @@ body {
     box-shadow: none;
     background-color: rgba(0, 0, 0, 0);
 }
+
+.input-group-append {
+    display: flex;
+    align-items: center;
+}
+
+    .input-group-append button {
+        margin-top:-0.1px;
+        height:38.3px;
+    }
