--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -36,6 +36,12 @@
                                 <a class="nav-link text-dark" asp-area="" asp-controller="CustomerModels" asp-action="Profile">Profile</a>
                             </li>
                         }
+                         @if (User.IsInRole("admin"))
+                        {
+                            <li class="nav-item">
+                                <a class="nav-link text-dark" asp-area="" asp-controller="CustomerModels" asp-action="Index">Customers</a>
+                            </li>
+                        }
                     </ul>
                     <partial name="_LoginPartial" />
                 </div>
