--- a/Views/CustomerModels/addReview.cshtml
+++ b/Views/CustomerModels/addReview.cshtml
@@ -8,7 +8,7 @@
         </div>
         <div class="form-field col-lg-12 ">
             <label for="comment" class="control-label">Comment</label>
-            <input type="text" class="form-control" id="comment" name="comment" autocomplete="off" required />
+            <textarea class="form-control" id="comment" name="comment" autocomplete="off" required ></textarea>
         </div>
         <div class="form-field">
         <button class="submit-btn" type="submit" asp-action="addReview">Submit</button>
