--- a/Views/HotelModels/Edit.cshtml
+++ b/Views/HotelModels/Edit.cshtml
@@ -4,60 +4,53 @@
     ViewData["Title"] = "Edit";
 }
 
-<h1>Edit</h1>
-
-<h4>HotelModel</h4>
-<hr />
-<div class="row">
-    <div class="col-md-4">
-        <form asp-action="Edit">
+<section class="title-template">
+    <h1 class="title">Edit Hotel</h1>
+    <form class="contact-form row" asp-action="Edit">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <input type="hidden" asp-for="HotelId" />
-            <div class="form-group">
+        <div class="form-field">
                 <label asp-for="City" class="control-label"></label>
                 <input asp-for="City" class="form-control" />
                 <span asp-validation-for="City" class="text-danger"></span>
             </div>
-            <div class="form-group">
+        <div class="form-field">
                 <label asp-for="Address" class="control-label"></label>
                 <input asp-for="Address" class="form-control" />
                 <span asp-validation-for="Address" class="text-danger"></span>
             </div>
-            <div class="form-group">
+        <div class="form-field">
                 <label asp-for="HotelName" class="control-label"></label>
                 <input asp-for="HotelName" class="form-control" />
                 <span asp-validation-for="HotelName" class="text-danger"></span>
             </div>
-            <div class="form-group">
+        <div class="form-field">
                 <label asp-for="Rooms" class="control-label"></label>
                 <input asp-for="Rooms" class="form-control" />
                 <span asp-validation-for="Rooms" class="text-danger"></span>
             </div>
-            <div class="form-group">
+        <div class="form-field">
                 <label asp-for="Image" class="control-label"></label>
                 <input asp-for="Image" class="form-control" />
                 <span asp-validation-for="Image" class="text-danger"></span>
             </div>
-            <div class="form-group">
+        <div class="form-field">
                 <label asp-for="Description" class="control-label"></label>
                 <input asp-for="Description" class="form-control" />
                 <span asp-validation-for="Description" class="text-danger"></span>
             </div>
-            <div class="form-group">
+        <div class="form-field">
                 <label asp-for="Price" class="control-label"></label>
                 <input asp-for="Price" class="form-control" />
                 <span asp-validation-for="Price" class="text-danger"></span>
             </div>
-            <div class="form-group">
-                <input type="submit" value="Save" class="btn btn-primary" />
+        <div class="form-field d-flex justify-content-between">
+            <a class="btn submit-btn" asp-action="Index">Back to List</a>
+            <input type="submit" value="Save" class="submit-btn" />
             </div>
         </form>
-    </div>
-</div>
+</section>
 
-<div>
-    <a asp-action="Index">Back to List</a>
-</div>
 
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
