--- a/Views/CustomerModels/Create.cshtml
+++ b/Views/CustomerModels/Create.cshtml
@@ -36,8 +36,8 @@
                 <span asp-validation-for="Comments" class="text-danger"></span>
             </div>
         <div class="d-flex justify-content-between">
-            <a class="btn btn-secondary" asp-action="Index">Back to List</a>
-                <input type="submit" value="Create" class="btn btn-primary" />
+            <a class="btn btn-secondary" asp-controller="HotelModels" asp-action="Index">Back to List</a>
+                <input type="submit" value="Book" class="btn btn-primary" />
             </div>
         </form>
 </section>
