--- a/Views/Shared/_LoginPartial.cshtml
+++ b/Views/Shared/_LoginPartial.cshtml
@@ -14,7 +14,7 @@
         </li>
         }
     <li class="nav-item">
-            <a class="nav-link text-dark" asp-area="Identity" asp-page="/Account/Manage/Index" title="Manage">
+            <a class="nav-link text-dark" asp-area="Identity" asp-controller="CustomerModels" asp-action="Profile" title="Manage">
                 Hello @(User.Identity.Name?.Split('@')[0].Length > 0 ? char.ToUpper(User.Identity.Name.Split('@')[0][0]) + User.Identity.Name.Split('@')[0].Substring(1) : "")!
             </a>
         </li>
