nav bar and detials image updated

--- a/Areas/Identity/Pages/Account/Login.cshtml
+++ b/Areas/Identity/Pages/Account/Login.cshtml
@@ -23,7 +23,7 @@
             <span asp-validation-for="Input.Password" class="text-danger"></span>
         </div>
         <div class="d-flex justify-content-center">
-        <button id="login-submit" type="submit" class="submit-btn">Log in</button>
+            <button id="login-submit" type="submit" class="submit-btn">Log in &nbsp; <i class="fa-solid fa-right-to-bracket"></i></button>
         </div>
     </form>
 </section>
