--- a/Views/CustomerModels/Index.cshtml
+++ b/Views/CustomerModels/Index.cshtml
@@ -1,5 +1,19 @@
 ﻿@model IEnumerable<Hotel_Room_Booking.Models.CustomerModel>
 
+
+<div class="row mb-4 d-flex justify-content-center">
+    <div class="col-md-6">
+        <form method="get" action="@Url.Action("Index", "CustomerModels")">
+            <div class="input-group">
+                @Html.DropDownList("searchHotel", (SelectList)ViewBag.Hotels, "Around the globe", new { @class = "form-control" })
+                <div class="input-group-append">
+                    <button type="submit" class="btn btn-primary">Search</button>
+                </div>
+            </div>
+        </form>
+    </div>
+</div>
+
 <table class="table table-striped  table-light table-hover">
     <thead>
         <tr class="table-primary">
