--- a/Views/HotelModels/Details.cshtml
+++ b/Views/HotelModels/Details.cshtml
@@ -8,9 +8,28 @@
     <div class="flex items-center justify-center min-h-screen">
         <div class="max-w-sm w-full sm:w-1/2 lg:w-1/2 py- px-3">
             <div class="bg-white shadow-xl overflow-hidden detailsCard" style="border-radius:25px;">
-                <div class="bg-cover bg-center h-56 p-4" style="background-image: url(@Model.Image)">
-                    
+                <div class="bg-cover bg-center h-56 p-4" style="background-image: url(@Model.Image); cursor: pointer;" data-toggle="modal" data-target="#fullScreenImageModal">
                 </div>
+
+
+                <!-- Full Screen Image Modal -->
+                <div class="modal fade" id="fullScreenImageModal" tabindex="-1" role="dialog" aria-labelledby="fullScreenImageModalLabel" aria-hidden="true">
+                    <div class="modal-dialog modal-dialog-centered modal-lg" role="document">
+                        <div class="modal-content">
+                            <div class="modal-header">
+                                <h5 class="modal-title" id="fullScreenImageModalLabel">@Model.HotelName (@Model.City)</h5>
+                                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                    <span aria-hidden="true">&times;</span>
+                                </button>
+                            </div>
+                            <div class="modal-body">
+                                <img src="@Model.Image" class="img-fluid w-100">
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+
                 <div class="pt-4 px-4 pb-2">
                     <p class="uppercase tracking-wide text-sm font-bold text-gray-700">@Model.HotelName (@Model.City)</p>
                     <p class="text-gray-700"><br />@Model.Address</p>
