--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -18,28 +18,28 @@
 </head>
 <body>
     <header>
-        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
+        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-transparent border-bottom box-shadow mb-3">
             <div class="container-fluid">
-                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">Presidio-Bookings</a>
+                <a class="navbar-brand text-white mr-3" asp-area="" asp-controller="Home" asp-action="Index">Presidio-Bookings</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
                     <ul class="navbar-nav flex-grow-1">
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="HotelModels" asp-action="Index">Hotels</a>
+                        <li class="nav-item ml-3 mr-3">
+                            <a class="nav-link text-white" asp-area="" asp-controller="HotelModels" asp-action="Index">Hotels</a>
                         </li>
                         @if (User.Identity.IsAuthenticated && !User.IsInRole("admin"))
                         {
-                            <li class="nav-item">
-                                <a class="nav-link text-dark" asp-area="" asp-controller="CustomerModels" asp-action="Profile">Profile</a>
+                            <li class="nav-item mr-3">
+                                <a class="nav-link text-white" asp-area="" asp-controller="CustomerModels" asp-action="Profile">Profile</a>
                             </li>
                         }
-                         @if (User.IsInRole("admin"))
+                        @if (User.IsInRole("admin"))
                         {
-                            <li class="nav-item">
-                                <a class="nav-link text-dark" asp-area="" asp-controller="CustomerModels" asp-action="Index">Customers</a>
+                            <li class="nav-item mr-3">
+                                <a class="nav-link text-white" asp-area="" asp-controller="CustomerModels" asp-action="Index">Customers</a>
                             </li>
                         }
                     </ul>
@@ -47,6 +47,7 @@
                 </div>
             </div>
         </nav>
+
     </header>
     <div class="container">
         <main role="main" class="pb-3">
