--- a/Views/Shared/_LoginPartial.cshtml
+++ b/Views/Shared/_LoginPartial.cshtml
@@ -1,39 +1,39 @@
 ﻿@using Microsoft.AspNetCore.Identity
 @inject SignInManager<IdentityUser> SignInManager
 @inject UserManager<IdentityUser> UserManager
-
 <ul class="navbar-nav">
-@if (SignInManager.IsSignedIn(User))
-{
+    @if (SignInManager.IsSignedIn(User))
+    {
         @if (User.IsInRole("admin"))
         {
-            <li class="nav-item">
-                <button type="button" class="btn btn-outline-primary" data-toggle="modal" data-target="#addAdminModal">
-                Add Admin
-            </button>
-        </li>
+            <li class="nav-item mr-3">
+                <button type="button" class="btn btn-outline-light" data-toggle="modal" data-target="#addAdminModal">
+                    Add Admin
+                </button>
+            </li>
         }
-    <li class="nav-item">
-            <a class="nav-link text-dark" asp-area="Identity" asp-controller="CustomerModels" asp-action="Profile" title="Manage">
+        <li class="nav-item mr-3">
+            <a class="nav-link text-white" asp-area="Identity" asp-controller="CustomerModels" asp-action="Profile" title="Manage">
                 Hello @(User.Identity.Name?.Split('@')[0].Length > 0 ? char.ToUpper(User.Identity.Name.Split('@')[0][0]) + User.Identity.Name.Split('@')[0].Substring(1) : "")!
             </a>
         </li>
-    <li class="nav-item">
-        <form  class="form-inline" asp-area="Identity" asp-page="/Account/Logout" asp-route-returnUrl="@Url.Action("Index", "Home", new { area = "" })">
-            <button  type="submit" class="nav-link btn btn-link text-dark">Logout</button>
-        </form>
-    </li>
-}
-else
-{
-    <li class="nav-item">
-        <a class="nav-link text-dark" asp-area="Identity" asp-page="/Account/Register">Register</a>
-    </li>
-    <li class="nav-item">
-        <a class="nav-link text-dark" asp-area="Identity" asp-page="/Account/Login">Login</a>
-    </li>
-}
+        <li class="nav-item mr-3">
+            <form class="form-inline" asp-area="Identity" asp-page="/Account/Logout" asp-route-returnUrl="@Url.Action("Index", "Home", new { area = "" })">
+                <button type="submit" class="nav-link btn btn-link text-white">Logout &nbsp; <i class="fa-solid fa-right-to-bracket"></i></button>
+            </form>
+        </li>
+    }
+    else
+    {
+        <li class="nav-item mr-3">
+            <a class="nav-link text-white" asp-area="Identity" asp-page="/Account/Register">Register</a>
+        </li>
+        <li class="nav-item mr-3">
+            <a class="nav-link text-white" asp-area="Identity" asp-page="/Account/Login">Login</a>
+        </li>
+    }
 </ul>
+
 <div class="modal fade" id="addAdminModal" tabindex="-1" role="dialog" aria-labelledby="addAdminModalLabel" aria-hidden="true">
     <div class="modal-dialog" role="document">
         <div class="modal-content">
